[package]
name = 'custom-rpc'
version = "2.0.0"
edition = '2018'
description = "custom RPC"


[dependencies]
jsonrpc-core = "15.0"
jsonrpc-core-client = "15.0"
jsonrpc-derive = "15.0"
hex = "0.4.2"

# Substrate packages

sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }
frame-system = {git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "master"  }
prost = "0.6"
# local packages

[build-dependencies]
prost-build = { version = "0.6" }

[features]
default = ["std"]
std = [
  "sp-api/std",
  "sp-runtime/std",
  "frame-system/std",
]